// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for SettingOffices renders correctly from memory 1`] = `
<div
  className="table__row"
>
  <span>
    EPIC Tower
  </span>
  <span />
  <span>
    GMT +3
  </span>
  <span>
    <Apollo(Apollo(EditOffice))
      currentPage={1}
      id="edit-modal"
      officeId="11"
      officeName="EPIC Tower"
      refetch={[MockFunction]}
    />
     
    <Apollo(Apollo(DeleteOffice))
      currentPage={1}
      id="delete-modal"
      officeId="11"
      officeName="EPIC Tower"
      refetch={[MockFunction]}
    />
  </span>
</div>
`;

exports[`Tests for SettingOffices renders correctly from memory 2`] = `
<div
  className="table__row"
>
  <span>
    EPIC Tower
  </span>
  <span />
  <span>
    GMT +1
  </span>
  <span>
    <Apollo(Apollo(EditOffice))
      currentPage={1}
      id="edit-modal"
      officeId="11"
      officeName="EPIC Tower"
      refetch={[MockFunction]}
    />
     
    <Apollo(Apollo(DeleteOffice))
      currentPage={1}
      id="delete-modal"
      officeId="11"
      officeName="EPIC Tower"
      refetch={[MockFunction]}
    />
  </span>
</div>
`;
